<resources>
    <string name="app_name">Binkio</string>

    <string name="login_subtitle"><![CDATA[Empoyering tech amazing individuals to shine trough hackathons, talks & challenges]]></string>
    <string name="login_button_loggin">Ingresar</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_user">Correo electrónico</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_footer_unselected">¿Aún no tienes una cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="we_want_to_know_you">Queremos conocerte</string>
    <string name="we_want_to_know_you_text">Regístrate y empieza a operar en la \n nueva economía</string>
    <string name="lastname">Apellido(s)</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>
    <string name="txtMain">Compra activos tokenizados desde cualquier parte del mundo.</string>
    <string name="txtMain2">\"Controla tus bienes digitales de forma \n flexible y segura\"</string>

    <!--    verification Module text-->
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="reset_password">Ingresa tu correo Electrónico. Te estaremos \n enviando un código para cambiar tu contraseña</string>
    <string name="reset_password_code_title">Código de reestablecimiento</string>
    <string name="reset_password_new">Ingresa tu nueva contraseña.</string>
    <string name="reset_password_new_introduce">Nueva contraseña</string>
    <string name="reset_password_new_repeat">Repite tu nueva contraseña</string>
    <string name="reset_password_code_text">Ingresa el código enviado al correo electrónico \ncorreo@arroba.com para reestablecer tu \ncontraseña</string>


    <!--    verification Module text-->
    <string name="verify_email">Verifica tu correo electrónico \n\nTe enviaremos un correo con un código de verificación</string>
    <string name="verify_phone">Verifica tu número de teléfono \n\nTe enviaremos un código de verificación por SMS</string>
    <string name="verificateUserText">Verifica tu usuario para acceder a \n nuestros servicios</string>
    <string name="verificateUserEmail">Validación de correo electronico</string>
    <string name="verificateUserPhone">Validación de número de teléfono</string>
    <string name="verificateUserEmailCode">Ingresa el código que te enviamos a tu correo</string>
    <string name="verificateUserPhoneCode">Ingresa el código que te enviamos por SMS</string>

    <string name="introduction_button_signin">Registrate</string>

    <string name="signin_form_real_name">Nombre(s)</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="number_phone">Numero de teléfono</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">Las contraseñas no coinciden</string>
    <string name="signin_error_dialog_positive_action">Okey </string>

    <string name="verification_button_go_to_nuwe">Vamos a Binkio</string>
    <string name="verification_check_mail">Revisa tu correo electrónico para recuperar tu contraseña (recuerda mirar en SPAM).</string>

    <string name="dialog_success_title">¡Login completo!</string>
    <string name="dialog_success_body">"Muy pronto al darle click a este boton ira al siguiente modulo de la app :) "</string>
    <string name="dialog_success_positive">¡Gracias!</string>

    <string name="feature_not_allowed">Feature no solicitada :)</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>
    <string name="next_btn">Siguiente</string>
    <string name="confirm_btn">Corfirmar</string>
    <string name="code_didnt_received">No he recibido el código</string>
    <string name="register_with_google">Registrate con Google</string>
    <string name="login_with_google">Accede con Google</string>
    <string name="remember_me_text">Recuerdame</string>
    <string name="physic_person">Soy persona física \n\nDesempeña una actividad económica bajo \nel ejercicio independiente de una profesión</string>
    <string name="moral_person">Soy persona moral \n\nDesempeña una actividad económica a traves \nde una sociedad comercial(Dueño de empresa)</string>
    <string name="wallet">Wallet</string>
    <string name="marketplace">Marketplace</string>
    <string name="home" />
    <string name="history">Historial</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_euros">$1,000 EUR</string>
    <string name="title_euros">Euros digitales</string>
    <string name="title_dollars">Dolares digitales</string>
    <string name="amount_dollars">$1,000 USD</string>
    <string name="buy_button">Comprar</string>
    <string name="nfts_title">NFTs</string>
    <string name="sell_button">Vender</string>
    <string name="matic_title">Matic</string>
    <string name="amount_pesos">$1,000 MXN</string>
    <string name="pesos_title">Pesos Mexicanos</string>
    <string name="amount_hint_dollars">= $61.00 USD</string>
    <string name="view_more">Ver más</string>
    <string name="last_transaction">Ultima transacción</string>
    <string name="go_to_marketplace">Ir a Marketplace</string>
    <string name="usdt_title">USDT</string>
    <string name="wbtc_title">WBTC</string>
    <string name="bitcoin_title">Bitcoin</string>
    <string name="eth_title">ETH</string>
    <string name="ethereum_title">Ethereum</string>
    <string name="actions">Acciones</string>
    <string name="my_actives">Mis activos</string>
    <string name="movements">Movimientos</string>
    <string name="my_wallet_title">Mi wallet</string>
    <string name="total_balance">Balance total</string>
    <string name="send_text">Enviar</string>
    <string name="solicit_text">Solicita</string>
    <string name="receive_crypto">Recibe criptomonedas</string>
    <string name="send_crypto">Envia criptomonedas</string>
    <string name="select_type_of_crypto">Selecciona el tipo de moneda a recibir:</string>
    <string name="select_type_of_crypto_to_send">Selecciona el activo a enviar: </string>
    <string name="receive_type_of_crypto">Tipo de moneda a recibir: </string>
    <string name="accepTermsAndConditionsText">*La compraventa de criptomonedas es liquidada por Binkio Pay, al operar das tu consentimiento en base a los terminos de uso</string>
    <string name="scan_qr">Escanea el siguiente código QR</string>
    <string name="copy_adress_binkio">Copia la dirección de tu cartera Binkio</string>
    <string name="only_red">Solo Red</string>
    <string name="polygon_text">Polygon</string>
    <string name="active_to_send">Activo a enviar</string>
    <string name="change_text">Cambiar</string>
    <string name="amount_to_send">¿Cuánto desea enviar?</string>
    <string name="address_text">Dirección</string>
    <string name="red_title">Red</string>
    <string name="write_direction_wallet">Escriba dirección de la wallet (Destinatario)</string>
    <string name="only_polygon_avalaible">Solo Polygon (MATIC) disponible actualmente.</string>
    <string name="icon">icon</string>
    <string name="comision_text">Comisión de la red:</string>
    <string name="comision">Comisión</string>
    <string name="amount_comision">34$</string>
    <string name="transfer">Transferencia</string>
</resources>