<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/walletFragment"
        android:title="@string/wallet"
        android:icon="@drawable/ic_wallet"/>

    <item
        android:id="@+id/marketplaceFragment"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/marketplace"/>

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>