<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:stateListAnimator="@null"
        android:text="@string/next_btn"
        app:icon="@drawable/back_button"
        app:iconTint="@null"
        app:layout_constraintEnd_toStartOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/send_crypto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/active_to_send"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/headerSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_wbtc"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/bitcoin_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/SecondaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/change_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryButton"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerSend">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/address_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:background="@drawable/container_view_without_color"
            android:textSize="12sp"
            android:hint="@string/write_direction_wallet"
            android:textColorHint="@color/hint_tex_2"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/red_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etChooseRed"
            android:background="@drawable/container_view_without_color"
            android:textSize="12sp"
            android:hint="@string/only_polygon_avalaible"
            android:textColorHint="@color/hint_tex_2"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/amount_to_send"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmountToSend"
            android:background="@drawable/container_view_without_color"
            android:textSize="12sp"
            android:hint="Mínimo $0.00"
            android:drawableEnd="@drawable/icon_btc_letter"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/hint_tex_2"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimaryButton"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:text="Max"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/hint_tex_2"
            android:textAlignment="textEnd"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:text="@string/comision_text"/>

        <TextView
            android:id="@+id/amountComision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/hint_tex_2"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:text="@string/amount_comision"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:layout_marginStart="50dp"
            android:textSize="12sp"
            android:text="Equiv. 120.0 USDT"/>

    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext1"
            style="@style/PrimaryButton"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:text="@string/next_btn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>