<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/verificateUserEmail"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"/>

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/verificateUserEmailCode"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"/>

    <include
        android:id="@+id/codeBox"
        layout="@layout/introduce_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCodeNoReceived"
        style="@style/SecondaryButton"
        android:fontFamily="@font/inter_semi_bold"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/code_didnt_received"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/PrimaryButton"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCodeNoReceived" />

    <!--    app:layout_constraintBottom_toTopOf="@+id/cardViewPart"-->

</androidx.constraintlayout.widget.ConstraintLayout>