<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/login_footer_selected"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:hint="@string/login_hint_user"
        style="@style/FormTextInputLayout"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:background="@drawable/border_background"
            style="@style/FormEditTextWithBorder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/FormTextInputLayout"
        android:hint="@string/login_hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/FormEditText"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHighlight="@color/error_dark"
            android:textColorHint="@color/error_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordRepeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/FormTextInputLayout"
        android:hint="@string/signin_form_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPasswordRepeat"
        style="@style/FormEditText"

        android:background="@drawable/border_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHighlight="@color/error_dark"
        android:textColorHint="@color/error_dark" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/login_footer_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordRepeat" />

    <View
        android:id="@+id/divider"
        android:background="@drawable/divider"
        android:backgroundTint="@null"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginGoogle"
        style="@style/googleButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="21dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:iconPadding="10dp"
        android:text="@string/register_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

<!--    <ProgressBar-->
<!--        android:id="@+id/pbLoading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"
        android:text="@string/signin_footer_unselected"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/signin_footer_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />



</androidx.constraintlayout.widget.ConstraintLayout>