<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".ui.introduction.IntroductionActivity">

    <ImageView
        android:id="@+id/nameApp"
        android:layout_width="82.73dp"
        android:layout_height="25.95dp"
        android:src="@drawable/binkio_letter"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        app:cardCornerRadius="46dp"
        android:elevation="15dp"
        android:background="@drawable/carousel_border"
        app:layoutManager="androidx.viewpager.widget.ViewPager"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/CaptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="41dp"
        android:paddingHorizontal="50dp"
        android:text="@string/txtMain" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/CaptionText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/txtMain2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dot_active"
            app:layout_constraintEnd_toStartOf="@id/dot2" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dot_inactive"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@id/dot3"
            app:layout_constraintStart_toEndOf="@id/dot1" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dot_inactive"
            android:layout_marginStart="10dp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/PrimaryButton"
        android:layout_width="235dp"
        android:layout_height="54dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/login_button_loggin"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSingIn"
        style="@style/SecondaryButton"
        android:layout_width="235dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="152dp"
        android:text="@string/introduction_button_signin" />

</LinearLayout>